# GoknarEngineEditor

./: .gitignore  .gitmodules  Build.sh  Build.txt  CMakeLists.txt  imgui.ini
Build_Debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GoknarEngineEditor.sln  GoknarEngineEditor.vcxproj  GoknarEngineEditor.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
Build_Debug/Content/: DefaultSceneShader.frag
Build_Debug/Goknar/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GOKNAR.sln  GOKNAR.vcxproj  GOKNAR.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake
CMake/: GenerateDynamicObjectFactoryRegistrar.cmake
Config/: Build.ini  EditorConfig.ini  GameConfig.ini
Content/: DefaultSceneShader.frag  DefaultSceneee.xml  DeferredRendering.frag  DeferredRendering.vert  M_TestMaterial  MyAnimGraph.xml
Content/Animations/: AG_DefaultCharacter
Content/Content/Meshes/Environment/Trees/: SM_Tree_01.fbx
Content/Content/Meshes/Skills/SkillObjects/: SM_FireBurstCastedSkillFloorFlameObject.fbx
Content/Content/Scenes/: Scene.xml
Content/Meshes/: SM_SkillTargetIndicator.fbx  SM_Terrain.fbx  SM_UnitCube.fbx  SM_UnitCylinder.fbx
Content/Meshes/Characters/: SkeletalMesh_MainCharacter.fbx
Content/Meshes/Characters/AI/: SkeletalMesh_FlyingAI.fbx
Content/Meshes/Environment/Plants/: SM_Mushrooms_01.fbx
Content/Meshes/Environment/Props/: SM_UnitCylinder.fbx
Content/Meshes/Environment/Stones/: SM_LStone_03.fbx  SM_LStone_04.fbx  SM_LStone_05.fbx  SM_LStone_06.fbx  SM_Stone_03.fbx  SM_Stone_04.fbx
Content/Meshes/Environment/Stones/Collisions/: SM_Collision_LStone_03.fbx  SM_Collision_LStone_04.fbx  SM_Collision_LStone_05.fbx  SM_Collision_LStone_06.fbx  (+3 more)
Content/Meshes/Environment/Waterfall/: SM_Cliff.fbx  SM_Pond.fbx  SM_SpiralFlow.fbx  SM_SurroundingStones.fbx  SM_WaterfallInner.fbx  SM_WaterfallOuter.fbx
Content/Meshes/Skills/SkillObjects/: SM_FireBall.fbx  SM_FireBurstCastedSkillObject.fbx  SM_MeleeBasicSkillCastedSkillObject.fbx
Content/Scenes/: DefaultScene.xml  Scene.xml  SceneFromBlender.xml
Content/Shaders/Environment/: RiverGBuffer.frag
EditorContent/: EditorAssetContainer
EditorContent/Meshes/: SM_MaterialSphere.fbx  SM_Plane.fbx  SM_River.fbx  SM_SweepFrustum.fbx  SM_UnitSphere.fbx
EditorContent/Meshes/Environment/Plants/: SM_Mushrooms_01.fbx
EditorContent/Meshes/Environment/Portals/: SM_Portal.fbx  SM_Portal_Outer_01.fbx
EditorContent/Meshes/Environment/Props/: SM_Stairs_01.fbx
EditorContent/Meshes/Environment/Stones/: SM_LStone_01.fbx  SM_LStone_02.fbx  SM_Stone_01.fbx  SM_Stone_02.fbx
EditorContent/Meshes/Environment/Waterfall/: SM_Pond.fbx
EditorContent/Meshes/Skills/SkillObjects/: SM_BasicSkill.fbx  SM_FireBurstCastedSkillFloorFlameObject.fbx
EditorContent/Shaders/Environment/: River.frag
EditorData/NewProject/: Build.sh  CMakeLists.txt
EditorData/NewProject/Config/: Build.ini
EditorData/NewProject/Content/: AssetContainer
EditorData/NewProject/Content/Animations/: AG_DefaultCharacter
EditorData/NewProject/Content/Materials/: M_DefaultMaterial
EditorData/NewProject/Content/Materials/Character/: M_Character
EditorData/NewProject/Content/Scenes/: DefaultScene  Room0
EditorData/NewProject/Editor/Materials/: M_DefaultMaterial
EditorData/NewProject/Editor/Materials/Character/: M_Character
EditorData/NewProject/Source/: Game.cpp
EditorData/NewProject/Source/Characters/: DefaultCharacter.cpp  DefaultCharacter.h
EditorData/NewProject/Source/Controllers/: DefaultCharacterController.cpp  DefaultCharacterController.h  FreeCameraController.cpp
EditorData/NewProject/Source/Data/: MaterialInitializer.cpp
EditorData/NewProject/Source/UI/: MainHUD.cpp
Source/: Editor.cpp  Editor.h  EditorCore.cpp  EditorCore.h  Game.cpp  Game.h
Source/Controllers/: EditorFreeCameraController.cpp  EditorFreeCameraController.h  FreeCameraController.cpp  FreeCameraController.cpp.orig  MeshViewerCameraController.cpp  MeshViewerCameraController.h
Source/Data/: MaterialInitializer.cpp  MaterialInitializer.h
Source/Lighting/: Sun.cpp  Sun.h
Source/Objects/: AxisObject.cpp  EditorFreeCameraObject.cpp  EditorFreeCameraObject.h  FreeCameraObject.cpp  FreeCameraObject.h  MeshViewerCameraObject.cpp  MeshViewerCameraObject.h
Source/Objects/DefaultScene/: DefaultSceneObjects.cpp  DefaultSceneObjects.h
Source/Objects/Environment/: EnvironmentPlants.cpp  EnvironmentPlants.h  EnvironmentStones.cpp  EnvironmentStones.h  EnvironmentTrees.cpp  EnvironmentTrees.h
Source/Objects/Portals/: Portal.cpp  Portal.h
Source/ShaderUtils/: ShaderGraphCompiler.cpp  ShaderGraphCompiler.h
Source/UI/: EditorAssetPathUtils.cpp  EditorAssetPathUtils.h  EditorContext.cpp  EditorContext.h  EditorDoubleClickController.cpp  EditorDoubleClickController.h  EditorHUD.cpp  EditorHUD.h  EditorRuntimeDynamicObjectFactoryRegistrar.cpp  EditorRuntimeDynamicObjectFactoryRegistrar.h  EditorSourceCodeUtils.cpp  EditorSourceCodeUtils.h  EditorUtils.cpp  EditorUtils.h  EditorWidgets.cpp  EditorWidgets.h
Source/UI/Panels/: AIDebugPanel.cpp  AIDebugPanel.h  AnimationGraphPanel.cpp  AnimationGraphPanel.h  AssetPickerPanel.cpp  AssetPickerPanel.h  AssetSelectorPanel.cpp  AssetSelectorPanel.h  ClassCreationPanel.cpp  ClassCreationPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  DebugPanel.cpp  DebugPanel.h  DetailsPanel.cpp  DetailsPanel.h  EditorPanel.cpp  EditorPanel.h  FileBrowserPanel.cpp  FileBrowserPanel.h  FoliagePanel.cpp  FoliagePanel.h  GeometryBuffersPanel.cpp  GeometryBuffersPanel.h  ImageViewerPanel.cpp  ImageViewerPanel.h  MenuBar.cpp  MenuBar.h  MenuBarPanel.cpp  MenuBarPanel.h  MeshAssetViewerPanelBase.cpp  MeshAssetViewerPanelBase.h  MeshViewerPanel.cpp  MeshViewerPanel.h  NavigationPanel.cpp  NavigationPanel.h  ObjectCreationPanel.cpp  ObjectCreationPanel.h  ObjectNameToCreatePanel.cpp  ObjectNameToCreatePanel.h  (+20 more)
Source/UI/Panels/ShaderEditor/: ShaderEditorPanel.cpp  ShaderEditorPanel.h  ShaderEditorTypes.h
(+4 files in other folders)
